--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "javascript-time-ago": "^2.5.4",
+    "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "nodemailer": "^6.7.5",
+    "pg": "^8.7.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0"
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "prisma": "^3.14.0",
+    "tailwindcss": "^3.0.24"
   }
 }
